--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/movie
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://ep-little-band-a10m1tkw.ap-southeast-1.aws.neon.tech/movie
+spring.datasource.username=movie_owner
+spring.datasource.password=5hRgsyXfiZ9u
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
