--- a/movie-fe/nixpacks.toml
+++ b/movie-fe/nixpacks.toml
@@ -32,6 +32,6 @@ runImage = 'ubuntu:20.04' # use a new ubuntu image to run the caddy server in
 onlyIncludeFiles = [
     'caddy',
     'Caddyfile',
-    'build',
-] # copy only the needed files and folders into the new image (react-scripts builds to a 'build' folder)
+    'dist',
+] # copy only the needed files and folders into the new image (Vite builds to a 'dist' folder)
 cmd = './caddy run --config Caddyfile --adapter caddyfile 2>&1' # start caddy using the Caddyfile config and caddyfile adapter
